$NetBSD: CHANGES-2011,v 1.2583 2011/10/19 22:14:35 minskim Exp $

Changes to the packages collection and infrastructure in 2011:

	Updated net/py-boto to 1.9b [gson 2011-01-01]
	Updated www/ikiwiki to 3.20101231 [schmonz 2011-01-02]
	Updated textproc/mdoclint to 1.13 [wiz 2011-01-02]
	Updated chat/psi to 0.14 [schnoebe 2011-01-02]
	Updated www/geeklog to 1.7.1.1 [taca 2011-01-03]
	Updated net/dhcpcd to 5.2.10 [roy 2011-01-03]
	Downgraded sysutils/py-dbus to 0.83.1 [drochner 2011-01-03]
	Updated net/wireshark to 1.4.2nb1 [tron 2011-01-04]
	Updated graphics/gnuplot to 4.2.6nb3 [dholland 2011-01-06]
	Updated graphics/gnuplot-nox11 to 4.2.6nb4 [dholland 2011-01-06]
	Updated www/contao29 to 2.9.3 [taca 2011-01-06]
	Updated www/typolight28 to 2.8.4nb2 [taca 2011-01-06]
	Updated www/ikiwiki to 3.20110105 [schmonz 2011-01-07]
	Updated lang/php5 to 5.2.17 [taca 2011-01-07]
	Updated lang/php53 to 5.3.5 [taca 2011-01-07]
	Updated www/contao29-translations to 20110108 [taca 2011-01-08]
	Updated sysutils/hal to 0.5.14nb1 [obache 2011-01-08]
	Updated lang/mono to 2.8.2 [kefren 2011-01-08]
	Updated www/mono-xsp to 2.8.2 [kefren 2011-01-08]
	Updated www/ap-mono to 2.8.2 [kefren 2011-01-08]
	Added devel/libuuid version 2.18 [markd 2011-01-08]
	Added devel/libblkid version 2.18 [markd 2011-01-08]
	Updated mail/mhonarc to 2.6.18 [spz 2011-01-09]
	Updated www/contao29-translations to 20110110 [taca 2011-01-10]
	Downgraded graphics/digikam to 1.6.0 [wiz 2011-01-10]
	Downgraded graphics/kipi-plugins to 1.6.0nb1 [wiz 2011-01-10]
	mk/bsd.pkg.mk: freeze ended for pkgsrc-2010Q4 branch [agc 2011-01-11]
	Updated sysutils/ipa to 2.0.9 [obache 2011-01-11]
	Updated www/gallery2 to 2.3.1 [jym 2011-01-11]
	Updated graphics/libraw to 0.12.3 [gls 2011-01-11]
	Updated lang/vala to 0.10.2 [gls 2011-01-11]
	Updated graphics/shotwell to 0.8.0 [gls 2011-01-11]
	Added devel/py-logilab-astng version 0.21.0 [drochner 2011-01-11]
	Added devel/py-logilab-common version 0.53.0 [drochner 2011-01-11]